--- a/Talk notes/README
+++ b/Talk notes/README
@@ -1,1 +1,1 @@
-This folder shares some studies on recent research topics. Please cite the references directly in the studies if needed. 
+This folder shares some studies on recent research topics. Please cite the references in the studies instead as you see fit. 
