--- a/Talk notes/README
+++ b/Talk notes/README
@@ -1,1 +1,1 @@
-This folder shares some studies on recent research topics. Please cite the corresponding references in the studies instead as you see fit. 
+This folder shares some studies on recent research topics. Please cite the corresponding references in the studies as you see fit. 
