--- a/Talk notes/README
+++ b/Talk notes/README
@@ -1,1 +1,2 @@
 This folder shares some studies on recent research topics. Please cite the corresponding references in the studies as you see fit. 
+Since 2023, please see this page for project updates: https://sites.google.com/site/lijianontheweb/home Thanks!
